--- a/css/mobile1.css
+++ b/css/mobile1.css
@@ -66,3 +66,8 @@ section .articuloDos {
     position: absolute;
     margin-bottom: 70%;
 }
+
+.cliente h2 {
+    margin-bottom: 2%;
+    font-size: 90%;
+  }
