--- a/css/mobile1.css
+++ b/css/mobile1.css
@@ -1,8 +1,8 @@
 .home {
     background-image: url(../img/Inicio.png);
-    background-size: 300%;
+    background-size: 400%;
     background-repeat: no-repeat;
-    height: 64vh;
+    height: 100%;
 }
 
 .boton {
@@ -15,16 +15,16 @@
 
 #producto {
     background-image: url(../img/Productos-3.jpg) ;
-    background-size: cover;
+    background-size: 100%;
     background-repeat: no-repeat;
-    height: 35vh;
+    height: 100%;
 }
 
 #acercade {
     background-image: url(../img/AcercaDeConPalabras.png); 
     background-size: cover; 
     background-repeat: no-repeat;
-    height: 40vh;
+    height:100%;
   
   }
 
@@ -61,13 +61,58 @@ section .articuloDos {
 
 .productosFooter {
     bottom: 0; 
-    width: 60%; 
+    width: 54%; 
     height: 40px;
     position: absolute;
-    margin-bottom: 70%;
+    margin-bottom: -17%;
 }
 
 .cliente h2 {
     margin-bottom: 2%;
     font-size: 90%;
   }
+
+.pie-pagina .grupo-1 .box .mini {
+    margin-left: 5%;
+  }
+
+.red-social {
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 0%;
+    
+}
+
+.pie-pagina .grupo-1 .red-social a {
+    text-decoration: none;
+    width: 100%;
+    line-height: 45px;
+    color: #fff;
+    margin-right: -3px;
+    background-color: #000032;
+    text-align: right;
+    transition: all 300 ms ease;
+
+}
+
+.pie-pagina .grupo-1 .box .btn {
+    color: #fff;
+    margin-bottom: 0px;
+    margin-left: -40%;
+    font-size: 10px;
+    display: flex;
+    list-style-type: none;
+
+    text-decoration: none
+}
+
+@media screen and (max-width:420px){
+    .pie-pagina .grupo-1 {
+        width: auto;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 40px;
+        padding: 45px 0px;
+        text-decoration: none;
+        margin-inline: 15%;
+    }
+} 
